--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ laut.fm.station('bass-base').listeners(show_listeners, true);
 <br>		
 <div class="text-test">SOCIALS</div>
 <p class="aligncenter">                                          
-<a href="https://www.instagram.com/bass-base/" target="_blank">
+<a href="https://www.instagram.com/bassbasefm/" target="_blank">
 <img src="images/igcolor.png" alt="IG" width="150" height="150">
 </a>
 </p>
