--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <br>
         <img id="ost_image" class="mx-auto d-block"
         style="max-height: 120px;" alt="album cover"
-        src="images/logo.png"/>
+        src="images/logo-ua.png"/>
 </div>
 
 <div style="font-family: rfm_light;font-size: 120%;text-align: center;color: #fff;padding-top: 10px;">24/7 slap house & future house only!</div>
