--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>bassbase. — online music radio</title>
+    <title>bassbase. fm — online music radio</title>
 <link rel="stylesheet" href="style.css">    
 <link rel="shortcut icon" href="images/icon2.png"/>
 
@@ -21,7 +21,7 @@
         src="images/logo-ua.png"/>
 </div>
 
-<div style="font-family: rfm_light;font-size: 120%;text-align: center;color: #fff;padding-top: 10px;">24/7 slap house & future house only!</div>
+<div style="font-family: rfm_light;font-size: 120%;text-align: center;color: #fff;padding-top: 10px;">24/7 radio with slap house & future house only!</div>
 <br>
 <br>
 <br>
