--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 <script type="text/html" id="current_song_template1_1" charset="utf-8">
 <%= "" + this.artist.name + "" %>
 </script> 
-<script type="text/javascript" charset="utf-8"> laut.fm.station('bass-base') 
+<script type="text/javascript" charset="utf-8"> laut.fm.station('hyperpop') 
 .current_song({container:'api_lfm_current_song1_1', template:'current_song_template1_1'}, true); </script>
 </script>
 <div id="api_lfm_current_song1_2" class="title-text">Loading...</div>
 <script type="text/html" id="current_song_template1_2" charset="utf-8">
 <%= "" + this.title + "" %>
 </script> 
-<script type="text/javascript" charset="utf-8"> laut.fm.station('bass-base') 
+<script type="text/javascript" charset="utf-8"> laut.fm.station('hyperpop') 
 .current_song({container:'api_lfm_current_song1_2', template:'current_song_template1_2'}, true); </script>
 </script>
 <br>
@@ -59,7 +59,7 @@
 <script type="text/javascript" charset="utf-8">
 var hoerer = document.getElementById('listener');
 var show_listeners = function(listeners){ listener.innerHTML = listeners}
-laut.fm.station('bass-base').listeners(show_listeners, true);
+laut.fm.station('hyperpop').listeners(show_listeners, true);
 </script>
 <br>
         </div>
