--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>bassbase. fm — online music radio</title>
+    <title>hyperpop.fm — online music radio</title>
 <link rel="stylesheet" href="style.css">    
 <link rel="shortcut icon" href="images/icon2.png"/>
 
@@ -21,13 +21,13 @@
         src="images/logo-ua.png"/>
 </div>
 
-<div style="font-family: rfm_light;font-size: 120%;text-align: center;color: #fff;padding-top: 10px;">24/7 radio with slap house & future house only!</div>
+<div style="font-family: rfm_light;font-size: 120%;text-align: center;color: #fff;padding-top: 10px;">24/7 melodic hyperpop tunes</div>
 <br>
 <br>
 <br>
 <br>
 <br>
-<div class="text-test"">LISTEN NOW!</div>
+<div class="text-test"">tune in!</div>
 <div class="container mx-auto">
         <div class="channel-boxes mx-auto shadow">
                 <div id="player_title"></div>
