--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 .current_song({container:'api_lfm_current_song1_2', template:'current_song_template1_2'}, true); </script>
 </script>
 <br>
-<div id="api_lfm_listener" class="listeners-text2">k <span id="listener" class="listeners-text">Loading...</span></div>
+<div id="api_lfm_listener" class="listeners-text2">listeners: <span id="listener" class="listeners-text">Loading...</span></div>
 <script type="text/javascript" charset="utf-8">
 var hoerer = document.getElementById('listener');
 var show_listeners = function(listeners){ listener.innerHTML = listeners}
