--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         src="images/logo-ua.png"/>
 </div>
 
-<div style="font-family: rfm_light;font-size: 120%;text-align: center;color: #fff;padding-top: 10px;">24/7 melodic hyperpop tunes</div>
+<div style="font-family: hfm_main;font-size: 120%;text-align: center;color: #fff;padding-top: 10px;">24/7 melodic hyperpop tunes</div>
 <br>
 <br>
 <br>
