--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <br>
 <br>
         <img id="ost_image" class="mx-auto d-block"
-        style="max-height: 120px;" alt="album cover"
-        src="images/logo-ua.png"/>
+        style="max-height: 105px;" alt="album cover"
+        src="images/widelogo.png"/>
 </div>
 
 <div style="font-family: hfm_main;font-size: 120%;text-align: center;color: #fff;padding-top: 10px;">24/7 melodic hyperpop tunes</div>
