--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
                 <div>
                     <audio autoplay; id="player" controls; style="--plyr-audio-control-color: #fff; --plyr-audio-controls-background: #fff0; --plyr-color-main: #ffffff54; --plyr-control-icon-size: 30px;">
-                        <source src="http://stream.laut.fm/bass-base"
+                        <source src="http://stream.laut.fm/hyperpop"
                                 type="audio/mp3"/>
                     </audio>
                 </div>
