--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </div>
     <title>hyperpop.fm — online music radio</title>
 <link rel="stylesheet" href="style.css">    
-<link rel="shortcut icon" href="images/icon2.png"/>
+<link rel="shortcut icon" href="images/icon.png"/>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css"
           integrity="sha512-oc9+XSs1H243/FRN9Rw62Fn8EtxjEYWHXRvjS43YtueEewbS6ObfXcJNyohjHqVKFPoXXUxwc+q1K7Dee6vv9g=="
